sumo/tests/traci/get_variable/ArealDetector/errors/UnknownAD/errors.traci
Error: Answered with error to command 0x8e: Areal detector 'xxx' is not known
